// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.createPost admin should create a post with optionnal fields. 1`] = `
Object {
  "createPost": Object {
    "errorCode": null,
    "post": Object {
      "abstract": "résumé",
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyVGhlbw==",
          "username": "Théo QP",
        },
      ],
      "body": "<p>Mon article</p>",
      "commentable": true,
      "displayedOnBlog": true,
      "isPublished": true,
      "media": Object {
        "id": "media1",
        "url": "https://capco.test/media/default/0001/01/providerReference1.jpg",
      },
      "metaDescription": "meta description",
      "owner": Object {
        "id": "VXNlcjp1c2VyQWRtaW4=",
        "username": "admin",
      },
      "publishedAt": "2020-06-05 12:15:30",
      "relatedContent": Array [
        Object {
          "__typename": "Theme",
          "id": "theme4",
          "title": "Thème vide",
        },
        Object {
          "__typename": "Proposal",
          "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
          "title": "Ravalement de la façade de la bibliothèque municipale",
        },
        Object {
          "__typename": "Proposal",
          "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDg=",
          "title": "Renovation of the gymnasium",
        },
        Object {
          "__typename": "Project",
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "title": "Budget Participatif IdF 3",
        },
        Object {
          "__typename": "Project",
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "title": "Food project",
        },
      ],
      "title": "Titre !",
    },
  },
}
`;

exports[`mutations.createPost admin should create a post with required fields. 1`] = `
Object {
  "createPost": Object {
    "errorCode": null,
    "post": Object {
      "abstract": "Mon article",
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyVGhlbw==",
          "username": "Théo QP",
        },
      ],
      "body": "<p>Mon article</p>",
      "commentable": true,
      "displayedOnBlog": true,
      "isPublished": true,
      "media": null,
      "metaDescription": null,
      "owner": Object {
        "id": "VXNlcjp1c2VyQWRtaW4=",
        "username": "admin",
      },
      "publishedAt": "2020-06-05 12:15:30",
      "relatedContent": Array [],
      "title": "Titre !",
    },
  },
}
`;
